# fantasy_baseball

./: .dockerignore  .env.example  .gitignore  .mcp.json  .user.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  bayesian_inference_prd.md  best_practices.md  conftest.py  d1baseball_catcher_drs_2026_full.csv  dagster-cloud.yaml  data_quality_issues.md  dbt_project.yml  mcp_details.md  mlflow.db  phase_4_context.md  project_context.md  pyproject.toml  snowflake_mcp_config.yaml
ablation_results/: proxy_clv_analysis.md
app/: CLAUDE.md  home.py  streamlit_app.py
betting_ml/: sub_model_registry.yaml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
dagster/: __init__.py
dagster_home/: dagster.yaml  deployment_settings.yaml
data_quality/: data_availability_windows.md  leakage_audit.md  open_data_quality_issues.md  resolved_data_quality_issues_april_2026.md
dbt/: .gitignore  README.md  data_quality_issues.md  dbt_project.yml  profiles.yml
docs/: e11_0b_step0_baseline.md  e11_20_cost_flips.md  e11_20_delta_rollout.md  e11_20a_delta_polars_spike.md  e11_5_dbt_engine_decision.md  e11_8_feed_monitor_matrix.md  e2_0c_f5_source_survey.md  model_deploy_runbook.md  model_promotion_runbook.md  model_roadmap.md  monitoring_runbook.md  monthly_schedule_s3_flip_design.md  performance_page_redesign_design.md  phase_8_infra_epic.md  tick_sf_free_step3_design.md  w7b2_intraday_serving_s3_flip_design.md
exploratory_data_analysis/: 01_target_variables.py  02_feature_coverage.py  03_rolling_window_stability.py  04_feature_correlations.py  05_park_and_context.py  06_bat_tracking_era.py  07_engineered_feature_lift.py  betting_model_findings.md
frontend/: .env.local.example  instrumentation-client.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  sentry.edge.config.ts  sentry.server.config.ts
infrastructure/: aws_resources.md
memory/: MEMORY.md  feedback_ddl_no_use_statements.md  feedback_no_github_actions.md  feedback_snowflake_variant_insert.md  feedback_uuid_string.md
models/: sources.yml
non_tech_reports/: phase_1_non_tech.md  phase_2_non_tech.md  phase_3_non_tech.md  phase_4_non_tech.md  phase_5_non_tech.md  phase_6_non_tech.md  phase_7_non_tech.md  phase_8_non_tech.md  sub_model_architecture.md
pipeline/: __init__.py
plan_specs/: eda_plan_spec_template.yaml  plan_spec_implementation.md
quant_sports_intel_models/: gtm_strategy.md  (+2 more)
scripts/: audit_prop_coverage.py  backfill_historical_odds_snapshots.py  backfill_line_movement_series.py  backfill_lineup_state_scd2.py  backfill_market_features_scd2.py  backfill_mlb_props_to_s3.py  backfill_multisport_odds_to_s3.py  backfill_multisport_props_to_s3.py  backfill_observed_weather.py  backfill_prediction_log.py  backfill_prediction_snapshots.py  backfill_serving_cache.py  backfill_transactions.py  backfill_umpire_assignments.py  backfill_weather_s3_gap.py  check_data_freshness.py  check_feature_block_coverage.py  check_odds_coverage.py  check_prediction_coverage.py  check_served_prediction_integrity.py  check_signal_freshness.py  compare_model_versions.py  compute_calibration_artifact_e9_26.py  compute_model_health.py  daily_run.md  date_utils.py  dbt_state.sh  delta_maintenance.py  derivative_odds_backfill.py  export_features_to_s3.py  export_odds_raw_to_s3.py  export_ref_players_to_s3.py  export_statcast_to_s3.py  export_w11_raw_to_s3.py  export_w4_raw_to_s3.py  export_w5_raw_to_s3.py  export_w6_raw_to_s3.py  export_w7b_precursors_to_s3.py  export_w8a_precursors_to_s3.py  export_w8b_precursors_to_s3.py  (+67 more)
scripts/ci/: check_deploy_wiring.py  check_env_parity.py
scripts/ddl/: add_bet_gate_columns.sql  add_calibrated_win_prob.sql  add_is_backfill_flag.sql  add_layer3_totals_columns.sql  create_actionnetwork_public_betting_raw.sql  create_catcher_framing_raw.sql  create_eb_batter_posteriors_raw.sql  create_model_health_log.sql  create_sprint_speed_raw.sql  daily_model_predictions_add_data_source.sql  daily_model_predictions_add_sub_model_versions.sql  decommission_w11_abcd_drop.py  dev_ingestion_schemas.sql  drop_w1_mart_pitch_snowflake.py  eb_park_factors_granular_raw.sql  eb_park_factors_raw.sql  epic_t_migrations.sql  feature_pregame_lineup_state.sql  feature_pregame_market_features.sql  generate_stg_batter_pitches_external_table.py  generate_w11b_external_tables.py  generate_w11c_external_tables.py  generate_w11d_external_tables.py  generate_w11tx_external_table.py  generate_w2_external_tables.py  generate_w3_external_tables.py  generate_w3pre_external_tables.py  generate_w4_external_tables.py  generate_w5_external_tables.py  generate_w5b_external_tables.py  generate_w6_external_tables.py  generate_w7_external_tables.py  generate_w7b_external_tables.py  generate_w8a_external_tables.py  generate_w8b_external_tables.py  generate_w9_external_tables.py  lineup_monitor_state_add_starters.sql  lineup_monitor_task.sql  mart_sub_model_signals.sql  model_tracking_migration.sql  (+30 more)
scripts/ddl/fangraphs/: fg_hitting_leaderboard_raw.sql  fg_stuff_plus_raw.sql  fg_zips_hitting_raw.sql  fg_zips_pitching_raw.sql  run_ddl.py  savant_park_factors_raw.sql
scripts/ops/: align_alpha_audit.py  dagster_runs.py  dagster_steplog.py  edge_roi_backtest.py  model_health_metrics.py  monitor_conviction_h2h.py  monitor_magnitude_h2h.py  reconcile_v6_ledger.py  refit_home_win_calibrator.py  rescore_audit.py  snowflake_cost_by_job.py
scripts/spikes/: diagnose_fangraphs_500.py  e11_20a_delta_poc.py
scripts/tests/: test_date_utils.py  test_fangraphs_client_pagination.py  test_lakehouse_raw_writer.py  test_lakehouse_read.py  test_parity_check_w8b_tolerance.py  test_props_force_recent.py  test_savant_ingestion.py  test_w11_ingestion_lakehouse.py  test_w11b_umpire_lakehouse.py  test_w11c_weather_lakehouse.py  test_w11d_public_betting_lakehouse.py  test_w11e_serving_coupled.py  test_w11fg_fangraphs_lakehouse.py
scripts/utils/: delta_lake.py  delta_lakehouse.py  fangraphs_client.py  lakehouse_raw_writer.py  lakehouse_read.py  snowflake_loader.py
(+2011 files in other folders)
