[project]
name = "baseball-betting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "snowflake-connector-python>=3.6",
    "cryptography>=41.0",
    "pytest>=7.0",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "xgboost>=2.0",
    "ngboost>=0.4",
    "shap>=0.44",
    "optuna>=4.8.0",
    "pyarrow>=24.0.0",
    "mlb-statsapi>=0.0.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["betting_ml"]
