[project]
name = "baseball-betting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "snowflake-connector-python>=3.6",
    "cryptography>=41.0",
    "pytest>=7.0",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "xgboost>=2.0",
    "ngboost>=0.4",
    "shap>=0.44",
    "optuna>=4.8.0",
    "pyarrow>=4.0.0",
    "duckdb>=1.1.0",
    "mlb-statsapi>=0.0.44",
    "streamlit>=1.56.0",
    "python-dotenv>=1.0",
    "plotly>=6.7.0",
    "curl-cffi>=0.7",
    "lightgbm>=4.6.0",
    "catboost>=1.2.10",
    "dagster>=1.11.5",
    "dagster-cloud",
    "dagster-webserver",
    "dagster-pipes",
    "dagster-dbt",
    "dagster-snowflake",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "mlflow>=2.13",
    "pymc>=5.0",
    "arviz>=0.18",
    "h5netcdf>=1.3",
    "h5py>=3.11",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["betting_ml"]

[tool.pytest.ini_options]
testpaths = ["betting_ml/tests", "scripts/tests"]
pythonpath = [".", "scripts"]
