[project]
name = "baseball-betting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    # PICKLE-FRAGILE SERVING LIBS — pinned EXACT (== not >=). Every served model
    # artifact is a joblib/pickle of a scikit-learn / ngboost / lightgbm / xgboost /
    # catboost estimator (see betting_ml/models/*, sub_models/*). These libraries
    # embed version-specific Cython internals in their pickles, so a train/serve
    # version skew fails to unpickle at serve time (e.g. sklearn 1.8→1.9 moved
    # sklearn._loss → "No module named '_loss'" broke strikeout_glm_v1). The
    # container Dockerfile MUST install these SAME exact versions (it pins to match)
    # so serving == the training env that created the artifacts. Bump these only
    # alongside a full re-fit + re-promote of every affected artifact, and update
    # the Dockerfile pins in the same PR.
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "snowflake-connector-python>=3.6",
    "cryptography>=41.0",
    "pytest>=7.0",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "xgboost==3.2.0",
    "ngboost==0.5.10",
    "shap>=0.44",
    "optuna>=4.8.0",
    "pyarrow>=4.0.0",
    "duckdb>=1.1.0",
    "mlb-statsapi>=0.0.44",
    "streamlit>=1.56.0",
    "python-dotenv>=1.0",
    "plotly>=6.7.0",
    "curl-cffi>=0.7",
    "lightgbm==4.6.0",
    "catboost==1.2.10",
    "dagster>=1.11.5",
    "dagster-cloud",
    "dagster-webserver",
    "dagster-pipes",
    "dagster-dbt",
    "dagster-snowflake",
    "dagster-postgres",
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.30.0",
    "mlflow>=2.13",
    "pymc>=5.0",
    "arviz>=0.18",
    "h5netcdf>=1.3",
    "h5py>=3.11",
    "psycopg2-binary>=2.9",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["betting_ml"]

[tool.pytest.ini_options]
testpaths = ["betting_ml/tests", "scripts/tests"]
pythonpath = [".", "scripts"]
# --durations=10 keeps ongoing slow-test visibility (drop -v in CI for quiet logs);
# --strict-markers makes a typo'd/unregistered marker an ERROR, so the slow/fast
# split can't silently rot. Parallelism (-n auto) is passed per-invocation by the
# CI jobs and the local fast gate, NOT here — a single-file targeted run shouldn't
# pay worker-spawn overhead.
addopts = "--durations=10 --strict-markers"
markers = [
    "slow: heavy Monte-Carlo / long-running tests (>5s). EXCLUDED from the fast gate; run via `-m slow`. The fast gate is `-m 'not slow' -n auto` and is the per-push handoff gate.",
    "integration: tests that exercise real external IO (Snowflake/S3/network). Currently NONE — all external IO in the suite is mocked; reserved so future genuinely-networked tests get quarantined from the fast gate.",
]
